--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb" }
-    }
+  "version" :2,
+  "builds":[
+    {src: "app.py", use:"use": @varcel/python}
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app.py"
-    }
+    {"src": "/(.*)", "dest" : "app.py"}
   ]
 }
