--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version" :2,
   "builds":[
-    {src: "app.py", use:"use": @varcel/python}
+    {src: "app.py", use:"use": @vercel/python}
   ],
   "routes": [
     {"src": "/(.*)", "dest" : "app.py"}
